# MegaManX

./: CMakeLists.txt  LEVEL_BUILDER_TUTORIAL.md  NUEVA_IA.md  README.md  build.bat  build.sh  main.cpp
docs/html/: _animator_component_8h_source.html  _audio_manager_8h_source.html  _b_v_h_8h_source.html  _components_8h_source.html  _debug_8h_source.html  _dynamic_input_manager_8h_source.html  _engine_8h_source.html  _entity_manager_8h_source.html  _i_a_components_8h_source.html  _input_manager_8h_source.html  _parallax_layer_8h_source.html  _prefab_manager_8h_source.html  _raycast_manager_8h_source.html  _render_text_manager_8h_source.html  _scene_8h_source.html  _scene_loader_8h_source.html  _scene_manager_8h_source.html  _systems_8h_source.html  _u_i_component_8h_source.html  annotated.html  annotated_dup.js  class_animator_loader-members.html  class_animator_loader.html  class_audio_manager-members.html  class_audio_manager.html  class_audio_manager.js  class_b_v_h-members.html  class_b_v_h.html  class_camera_loader-members.html  class_camera_loader.html  class_classic_i_a_loader-members.html  class_classic_i_a_loader.html  class_collider_loader-members.html  class_collider_loader.html  class_collision_system-members.html  class_collision_system.html  class_collision_system.js  class_component-members.html  class_component.html  class_component.js  (+194 more)
docs/latex/: _animator_component_8h_source.tex  _audio_manager_8h_source.tex  _b_v_h_8h_source.tex  _components_8h_source.tex  _debug_8h_source.tex  _dynamic_input_manager_8h_source.tex  _engine_8h_source.tex  _entity_manager_8h_source.tex  _i_a_components_8h_source.tex  _input_manager_8h_source.tex  _parallax_layer_8h_source.tex  _prefab_manager_8h_source.tex  _raycast_manager_8h_source.tex  _render_text_manager_8h_source.tex  _scene_8h_source.tex  _scene_loader_8h_source.tex  _scene_manager_8h_source.tex  _systems_8h_source.tex  _u_i_component_8h_source.tex  annotated.tex  class_animator_loader.tex  class_audio_manager.tex  class_b_v_h.tex  class_camera_loader.tex  class_classic_i_a_loader.tex  class_collider_loader.tex  class_collision_system.tex  class_component.eps  class_component.tex  class_component_loader.tex  class_debug.tex  class_dynamic_input_manager.tex  class_engine.tex  class_entity_manager.tex  class_input_manager.tex  class_parallax_layer_loader.tex  class_physics_system.tex  class_prefab_manager.tex  class_ray_cast_manager.tex  class_render_system.tex  (+52 more)
engine/: CMakeLists.txt  Doxyfile  tutorial.md
engine/Components/: AnimatorComponent.cpp  AnimatorComponent.h  Camera.cpp  Collider.cpp  Components.h  ParallaxLayer.cpp  ParallaxLayer.h  Rigidbody.cpp  SpriteRenderer.cpp  Transform.cpp  UIComponent.cpp  UIComponent.h
engine/Components/IA/: ClassicIA.cpp  IAComponents.h  ReinforcementIAComponent.cpp  ReinforcementIAComponent.h
engine/Core/: Engine.cpp  Engine.h  Systems.cpp  Systems.h
engine/Managers/: AudioManager.cpp  AudioManager.h  DynamicInputManager.cpp  DynamicInputManager.h  EntityManager.cpp  EntityManager.h  InputManager.cpp  InputManager.h  PrefabManager.cpp  PrefabManager.h  RaycastManager.cpp  RaycastManager.h  RenderTextManager.cpp  RenderTextManager.h
engine/Managers/Scenes/: Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h
engine/Utils/: BVH.cpp  BVH.h  Debug.cpp  Debug.h
game/: CMakeLists.txt  CameraDebugController.h  Game.cpp  Game.h  HealthComponent.h  MegamanLevelsManager.cpp  MegamanLevelsManager.h
game/Componentes_prueba/: ComponenteDePrueba.h  ComponenteDePrueba2.h
game/bars/: BarLifeComponent.h  BarPowerUpsComponent.h
game/chillPenguin/: ChillPenguin.h  ChillPenguinAdvancedIA.h  ChillPenguinBlizzardComponent.h  ChillPenguinBulletComponent.h  ChillPenguinIA.h  ChillPenguinIceBulletComponent.h  ChillPenguinPenguinComponent.h
game/drops/: DropController.h
game/effects/: BigExplosionComponent.h  SmallExplosionComponent.h
game/enemies/Flammingle/: FlammingleBulletComponent.h  FlammingleController.h
game/enemies/Hoganmer/: HoganmerBall.h  HoganmerController.h
game/enemies/RayBit/: RaybitBulletComponent.h  RaybitController.h
game/enemies/SnowShooter/: SnowShooterBulletComponent.h  SnowShooterController.h
game/enemies/acidDrop/: AcidDropComponent.h  AcidDropGenerator.h
game/enemies/axeMax/: AxeMaxController.h  BaseComponent.h  BlockComponent.h
game/enemies/battonBone/: BattonBoneController.h
game/enemies/bombBeen/: BombBeenController.h  BombBeenMineComponent.h
game/enemies/digLabour/: DigLabourController.h  DigLabourPickAxe.h
game/enemies/jamminger/: JammingerController.h
game/enemies/metal/: Metal.h
game/enemies/pipeturn/: PipeturnController.h
game/enemies/scrap/: ScrapController.h
game/enemies/scrapRobo/: ScrapRoboBullet.h  ScrapRoboController.h
game/enemies/skyClaw/: SkyClaw.h
game/enemies/spiky/: SpikyController.h
game/enemies/tombot/: TombotBootsController.h  TombotController.h
game/flamemammoth/: Fire.h  FlamemammothAdvancedIA.h  FlamemammothController.h  FlamemammothFloor.h  Lava.h
game/levels/: ChillPenguinManager.h  FlameMammothManager.h
game/megaman/: MegamanBulletComponent.h  MegamanCamera.h  MegamanCharge.h  MegamanController.cpp  MegamanController.h  MegamanMediumBulletComponent.h  MegamanStrongBulletComponent.h
game/megamanArmor/: MegamanArmorController.cpp  MegamanArmorController.h
game/menus/: BossSelectMenuComponent.h  MainMenuComponent.h  OptionsMenuComponent.h  PauseMenuComponent.h
game/menus/uiComponents/: BossMenuComponent.h  BulletMainMenuComponent.h  FlammeMenuComponent.h  FullBarMenuComponent.h  MapBgMenuComponent.h  MapMenuComponent.h  MegamanMainMenuComponent.h  MiniBarMenuComponent.h  PointMapMenuComponent.h  PowerMenuComponent.h  SelectorMenuComponent.h  SpecMenuComponent.h  StageMenuComponent.h
game/structures/: Crusher.h  IglooController.h
resources/input_config/: controls.config
resources/prefabs/: acidDrop.prefab  baseAxeMax.prefab  battonBone.prefab  blockAxeMax.prefab  chillPenguinAdvancedIA.prefab  chillpenguin.prefab  chillpenguinIceBullet.prefab  (+18 more)
(+87 files in other folders)
